--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "purs-worldle",
-  "scripts": {},
+  "scripts": {
+    "build": "spago build",
+    "watch": "spago build --watch",
+    "dev-server": "nodemon server.js",
+    "dev-client": "parcel watch client.js",
+    "dev": "spago build && concurrently npm:dev-server npm:dev-client npm:watch"
+  },
+  "type": "module",
   "dependencies": {
+    "concurrently": "^8.0.1",
     "esbuild": "^0.17.18",
     "parcel": "^2.8.3",
     "purescript": "^0.15.9",
@@ -9,7 +17,6 @@
     "spago": "^0.21.0",
     "xhr2": "^0.2.1"
   },
-  "devDependencies": {},
   "author": "",
   "license": "ISC",
   "workspaces": [
