--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "watch": "spago build --watch",
     "dev-server": "nodemon server.js",
     "dev-client": "parcel watch client.js",
-    "dev": "spago build && concurrently npm:dev-server npm:dev-client npm:watch"
+    "dev": "concurrently npm:dev-server npm:dev-client"
   },
   "type": "module",
   "dependencies": {
     "concurrently": "^8.0.1",
     "esbuild": "^0.17.18",
+    "nodemon": "^2.0.22",
     "parcel": "^2.8.3",
     "purescript": "^0.15.9",
     "purs-tidy": "^0.9.3",
@@ -22,5 +23,10 @@
   "workspaces": [
     "client/",
     "server/"
-  ]
+  ],
+  "devDependencies": {
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "url": "^0.11.0"
+  }
 }
